--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,8 +34,54 @@ security = [
 ]
 dev = [
   "pytest>=8.2.0",
+  "pytest-cov>=5.0.0",
+  "ruff>=0.6.0",
+  "mypy>=1.11.0",
+  "types-requests>=2.32.0.20240712",
 ]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 addopts = "-q"
+
+[tool.ruff]
+target-version = "py310"
+line-length = 100
+extend-exclude = [
+  "venv",
+  "cache",
+  "audit",
+  "data_storage",
+  "models_saved",
+]
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "B", "UP"]
+ignore = ["E501"]
+
+[tool.ruff.lint.isort]
+known-first-party = ["analysis", "config", "core", "data", "models", "trading", "ui", "utils"]
+
+[tool.mypy]
+python_version = "3.10"
+warn_return_any = true
+warn_unused_configs = true
+check_untyped_defs = true
+disallow_untyped_defs = false
+ignore_missing_imports = true
+exclude = "(^venv/|^cache/|^audit/|^data_storage/|^models_saved/)"
+
+[tool.coverage.run]
+source = ["analysis", "config", "core", "data", "models", "trading", "ui", "utils"]
+omit = [
+  "tests/*",
+  "venv/*",
+  "cache/*",
+  "audit/*",
+  "data_storage/*",
+  "models_saved/*",
+]
+
+[tool.coverage.report]
+show_missing = true
+skip_covered = true
