--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,30 +4,32 @@ version = "0.1.0"
 description = "AI-assisted stock trading workstation with backtest, OMS, risk, and UI"
 requires-python = ">=3.10"
 dependencies = [
-  "numpy==1.26.4",
-  "pandas==2.2.2",
-  "scikit-learn==1.5.1",
-  "requests==2.32.3",
-  "psutil==6.0.0",
-  "tqdm==4.66.5",
+  "numpy>=1.24.0,<2.0.0",
+  "pandas>=2.0.0,<3.0.0",
+  "scikit-learn>=1.3.0,<2.0.0",
+  "scipy>=1.11.0,<2.0.0",
+  "ta>=0.10.0,<1.0.0",
+  "requests>=2.31.0,<3.0.0",
+  "psutil>=6.0.0,<7.0.0",
+  "tqdm>=4.65.0,<5.0.0",
 ]
 
 [project.optional-dependencies]
 ml = [
-  "torch>=2.2.0",
+  "torch>=2.0.0,<3.0.0",
 ]
 china = [
-  "akshare>=1.14.0",
+  "akshare>=1.10.0",
 ]
 vpn = [
   "yfinance>=0.2.40",
 ]
 nlp = [
-  "beautifulsoup4>=4.12.3",
+  "beautifulsoup4>=4.12.0,<5.0.0",
 ]
 gui = [
-  "PyQt6>=6.6.1",
-  "pyqtgraph>=0.13.7",
+  "PyQt6>=6.5.0,<7.0.0",
+  "pyqtgraph>=0.13.0,<1.0.0",
 ]
 security = [
   "cryptography>=42.0.0",
