--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
   "ta>=0.10.0,<1.0.0",
   "requests>=2.31.0,<3.0.0",
   "psutil>=6.0.0,<7.0.0",
+  "cryptography>=42.0.0",
   "tqdm>=4.65.0,<5.0.0",
 ]
 
@@ -31,8 +32,8 @@ gui = [
   "PyQt6>=6.5.0,<7.0.0",
   "pyqtgraph>=0.13.0,<1.0.0",
 ]
-security = [
-  "cryptography>=42.0.0",
+live = [
+  "easytrader>=0.23.0",
 ]
 dev = [
   "pytest>=8.2.0",
@@ -71,7 +72,7 @@ warn_unused_configs = true
 check_untyped_defs = true
 disallow_untyped_defs = false
 ignore_missing_imports = true
-no_implicit_optional = false
+no_implicit_optional = true
 allow_redefinition = true
 disable_error_code = [
   "assignment",
