--- a/requirements.txt
+++ b/requirements.txt
@@ -1,61 +1,18 @@
 # requirements.txt
-# =====================================================================
-# CORE — Required for the trading system to function
-# =====================================================================
+# ================================================================
+# CORE runtime only (aligned with pyproject [project.dependencies])
+# ================================================================
 
-# ML Framework
-torch>=2.0.0,<3.0.0
 numpy>=1.24.0,<3.0.0
 pandas>=2.0.0,<3.0.0
 scikit-learn>=1.3.0,<2.0.0
 scipy>=1.11.0,<2.0.0
-
-# Technical Analysis
 ta>=0.10.0,<1.0.0
-
-# Data Sources (Chinese A-share market)
-akshare>=1.10.0
-
-# GUI
-PyQt6>=6.5.0,<7.0.0
-pyqtgraph>=0.13.0,<1.0.0
-
-# HTTP
 requests>=2.31.0,<3.0.0
 psutil>=6.0.0,<7.0.0
-
-# Progress bars
+cryptography>=42.0.0
 tqdm>=4.65.0,<5.0.0
 
-# =====================================================================
-# OPTIONAL — Install only if needed
-# Uncomment the sections you need
-# =====================================================================
-
-# --- Broker Integration (Chinese brokers) ---
-# easytrader>=0.21.0        # Unmaintained — test thoroughly
-# playwright>=1.40.0        # For web-based broker automation
-# pyautogui>=0.9.54         # For GUI automation fallback
-# pygetwindow>=0.0.9
-# pytesseract>=0.3.10       # Requires Tesseract OCR installed
-
-# --- NLP / Sentiment Analysis ---
-# transformers>=4.30.0,<5.0.0   # WARNING: ~2GB download
-# jieba>=0.42.1                  # Chinese text segmentation
-
-# --- Web Scraping ---
-# beautifulsoup4>=4.12.0,<5.0.0
-
-# --- Extra Visualization ---
-# matplotlib>=3.7.0,<4.0.0
-# seaborn>=0.12.0,<1.0.0
-
-# =====================================================================
-# DEVELOPMENT ONLY — Do not install in production
-# pip install -r requirements-dev.txt
-# =====================================================================
-# pytest>=7.4.0
-# black>=23.7.0
-# isort>=5.12.0
-# mypy>=1.5.0
-# ruff>=0.1.0
+# Optional install profiles:
+# - Desktop/UI + CN feeds + ML:  pip install -r requirements-desktop.txt
+# - Full optional stack:          pip install -r requirements-all.txt
