--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,10 +68,11 @@ known-first-party = ["analysis", "config", "core", "data", "models", "trading", 
 [tool.mypy]
 python_version = "3.10"
 warn_return_any = true
+warn_redundant_casts = true
 warn_unused_configs = true
 check_untyped_defs = true
-disallow_untyped_defs = false
-ignore_missing_imports = true
+disallow_untyped_defs = true
+ignore_missing_imports = false
 no_implicit_optional = true
 allow_redefinition = true
 disable_error_code = [
