--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ extend-exclude = [
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "B", "UP", "D", "ANN"]
-ignore = ["E501", "D100", "D104", "D105", "D107", "ANN101", "ANN102", "ANN401"]
+ignore = ["E501", "D100", "D104", "D105", "D107", "ANN401"]
 
 [tool.ruff.lint.isort]
 known-first-party = ["analysis", "config", "core", "data", "models", "trading", "ui", "utils"]
@@ -95,7 +95,7 @@ enable_error_code = [
   "truthy-bool",
   "ignore-without-code",
 ]
-exclude = "(^|.*[\\\\/])(venv|cache|audit|data_storage|models_saved)([\\\\/]|$)"
+exclude = "(^|.*[\\\\/])(venv|cache|audit|data_storage|models_saved|scripts)([\\\\/]|$)"
 
 [[tool.mypy.overrides]]
 module = [
