--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,18 @@ security = [
 live = [
   "easytrader>=0.23.0",
 ]
+explainability = [
+  "shap>=0.44.0",
+  "lime>=0.2.0",
+]
+backup = [
+  "boto3>=1.34.0",
+  "azure-storage-blob>=3.19.0",
+  "google-cloud-storage>=2.13.0",
+]
+two-factor-auth = [
+  "qrcode[pil]>=7.4.0",
+]
 dev = [
   "pytest>=8.2.0",
   "pytest-cov>=5.0.0",
@@ -72,7 +84,7 @@ dev = [
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
-addopts = "-q --cov=analysis --cov=config --cov=core --cov=data --cov=models --cov=trading --cov=ui --cov=utils --cov-report=term-missing --cov-fail-under=44"
+addopts = "-q --cov=analysis --cov=config --cov=core --cov=data --cov=models --cov=trading --cov=ui --cov=utils --cov-report=term-missing --cov-fail-under=70"
 
 [tool.ruff]
 target-version = "py310"
@@ -97,47 +109,24 @@ convention = "google"
 
 [tool.mypy]
 python_version = "3.10"
-warn_return_any = false
+warn_return_any = true
 warn_redundant_casts = true
 warn_unused_configs = true
-check_untyped_defs = false
-disallow_untyped_defs = false
-disallow_incomplete_defs = false
+check_untyped_defs = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
 no_implicit_optional = true
-strict_optional = false
+strict_optional = true
 warn_no_return = true
-warn_unreachable = false
-allow_redefinition = true
+warn_unreachable = true
+allow_redefinition = false
 show_error_codes = true
 pretty = true
 disable_error_code = [
   "import",
   "misc",
-  "attr-defined",
-  "assignment",
-  "method-assign",
-  "no-any-return",
-  "union-attr",
-  "arg-type",
-  "call-overload",
-  "return-value",
-  "var-annotated",
-  "list-item",
-  "has-type",
-  "index",
-  "operator",
-  "override",
-  "no-redef",
-  "abstract",
-  "dict-item",
-  "truthy-function",
-  "no-untyped-def",
-  "unreachable",
-  "redundant-expr",
-  "truthy-bool",
-  "ignore-without-code",
 ]
-exclude = "(^|.*[\\\\/])(venv|cache|audit|data_storage|models_saved|scripts|tests)([\\\\/]|$)"
+exclude = "(^|.*[\\\\/])(venv|cache|audit|data_storage|models_saved|scripts)([\\\\/]|$)"
 
 [[tool.mypy.overrides]]
 module = [
