--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 description = "AI-assisted stock trading workstation with backtest, OMS, risk, and UI"
 requires-python = ">=3.10"
 dependencies = [
-  "numpy>=1.24.0,<3.0.0",
+  # FIX #33: Pin numpy to <2.0.0 to avoid breaking changes
+  "numpy>=1.24.0,<2.0.0",
   "pandas>=2.0.0,<3.0.0",
   "scikit-learn>=1.3.0,<2.0.0",
   "scipy>=1.11.0,<2.0.0",
