--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,37 @@
-# requirements.txt
-# ================================================================
-# CORE runtime only (aligned with pyproject [project.dependencies])
-# ================================================================
+# Trading Graph - Core Requirements
+# Modernized for 2025 with async I/O and cutting-edge ML
 
-numpy>=1.24.0,<3.0.0
-pandas>=2.0.0,<3.0.0
+# Core numerical stack
+numpy>=1.26.0,<2.1.0
+pandas>=2.1.0,<3.0.0
 scikit-learn>=1.3.0,<2.0.0
 scipy>=1.11.0,<2.0.0
-ta>=0.10.0,<1.0.0
+ta>=0.11.0,<1.0.0
+
+# Async I/O stack
+aiohttp>=3.9.0,<4.0.0
+httpx>=0.25.0,<1.0.0
+anyio>=4.0.0,<5.0.0
+
+# Database layer
+aiosqlite>=0.19.0,<1.0.0
+sqlalchemy>=2.0.0,<3.0.0
+
+# ML stack
+torch>=2.1.0,<3.0.0
+torchvision>=0.16.0,<1.0.0
+
+# HTTP and networking
 requests>=2.31.0,<3.0.0
 psutil>=6.0.0,<7.0.0
-cryptography>=42.0.0
-tqdm>=4.65.0,<5.0.0
 
-# Optional install profiles:
-# - Desktop/UI + CN feeds + ML:  pip install -r requirements-desktop.txt
-# - Full optional stack:          pip install -r requirements-all.txt
+# Security
+cryptography>=42.0.0,<46.0.0
+
+# Utilities
+tqdm>=4.66.0,<5.0.0
+pydantic>=2.5.0,<3.0.0
+pydantic-settings>=2.1.0,<3.0.0
+
+# Redis caching
+redis>=5.0.0,<6.0.0
