--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,10 @@ sqlalchemy>=2.0.0,<3.0.0
 torch>=2.1.0,<3.0.0
 torchvision>=0.16.0,<1.0.0
 
+# Transformers for NLP and sentiment analysis
+transformers>=4.36.0,<5.0.0
+sentence-transformers>=2.2.0,<3.0.0
+
 # HTTP and networking
 requests>=2.31.0,<3.0.0
 psutil>=6.0.0,<7.0.0
