--- a/requirements-live.txt
+++ b/requirements-live.txt
@@ -1,5 +1,3 @@
-# Live trading profile (desktop + broker connector)
+# Analysis-only profile (legacy live profile kept for compatibility)
 
 -r requirements-desktop.txt
-
-easytrader>=0.23.0
