--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ ta>=0.11.0,<1.0.0
 aiohttp>=3.9.0,<4.0.0
 httpx>=0.25.0,<1.0.0
 anyio>=4.0.0,<5.0.0
+websockets>=12.0,<13.0
 
 # Database layer
 aiosqlite>=0.19.0,<1.0.0
