--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
 # Trading Graph - Core Requirements
 # Modernized for 2025 with async I/O and cutting-edge ML
+#
+# China Network Notice:
+# For users in mainland China, use Tsinghua or AliPy mirrors for faster installs:
+#   pip install -r requirements.txt -i https://pypi.tuna.tsinghua.edu.cn/simple
+#   pip install -r requirements.txt -i https://mirrors.aliyun.com/pypi/simple/
+#
+# Or set environment variable:
+#   export PIP_INDEX_URL=https://pypi.tuna.tsinghua.edu.cn/simple
 
 # Core numerical stack
 numpy>=1.26.0,<2.1.0
@@ -40,3 +48,6 @@ pydantic-settings>=2.1.0,<3.0.0
 
 # Redis caching
 redis>=5.0.0,<6.0.0
+
+# China-specific dependencies (optional but recommended)
+# akshare>=1.11.0  # Uncomment for China A-share data (works best in China direct mode)
