--- a/pyproject.toml
+++ b/pyproject.toml
@@ -119,6 +119,7 @@ dev = [
   "pytest>=8.0.0",
   "pytest-cov>=5.0.0",
   "pytest-asyncio>=0.23.0",
+  "pytest-qt>=4.4.0",
   "ruff>=0.1.0",
   "mypy>=1.8.0",
   "types-requests>=2.32.0.20240712",
@@ -128,6 +129,7 @@ dev = [
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 addopts = "-q --cov=analysis --cov=config --cov=core --cov=data --cov=models --cov=ui --cov=utils --cov-report=term-missing --cov-fail-under=40"
+asyncio_mode = "auto"
 
 [tool.ruff]
 target-version = "py311"
