--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -9,6 +9,7 @@
 pytest>=8.2.0
 pytest-cov>=5.0.0
 pytest-asyncio>=0.23.0
+pytest-qt>=4.4.0
 ruff>=0.6.0
 mypy>=1.11.0
 types-requests>=2.32.0.20240712
