fix:disadvantage-widly

--- a/.env.example
+++ b/.env.example
@@ -4,160 +4,85 @@
 # ================================================================
 # TRADING MODE
 # ================================================================
-# Options: simulation | live
 TRADING_MODE=simulation
-
-# Initial capital for simulation
 TRADING_INITIAL_CAPITAL=100000
 
 # ================================================================
 # RISK LIMITS
 # ================================================================
-# Maximum position as percentage of portfolio
 TRADING_MAX_POSITION_PCT=15
-
-# Maximum daily loss percentage
 TRADING_MAX_DAILY_LOSS_PCT=3
-
-# Maximum drawdown percentage (circuit breaker)
 TRADING_MAX_DRAWDOWN_PCT=15
-
-# Maximum number of positions
 TRADING_MAX_POSITIONS=10
 
 # ================================================================
 # AUTO-TRADE SETTINGS
 # ================================================================
-# Options: manual | semi_auto | auto
 TRADING_AUTO_TRADE_MODE=manual
-
-# Minimum confidence threshold for auto-trades
 TRADING_MIN_CONFIDENCE=0.70
-
-# Maximum trades per stock per day
 TRADING_MAX_TRADES_PER_STOCK=3
-
-# Cooldown period between trades (seconds)
 TRADING_TRADE_COOLDOWN=300
 
 # ================================================================
-# DATA SOURCES
+# DATA SOURCES (China-only)
 # ================================================================
-# Primary data source for China A-shares
-# Options: tencent | akshare | sina | yahoo
 TRADING_PRIMARY_SOURCE=tencent
-
-# Enable AkShare (requires good China network)
 TRADING_AKSHARE_ENABLED=1
+TRADING_ENABLED_SOURCES=tencent,akshare,sina
 
 # ================================================================
-# CHINA NETWORK SETTINGS
+# CHINA NETWORK MODE (Always enabled)
 # ================================================================
-# Enable VPN mode for Great Firewall traversal
-TRADING_VPN=0
-
-# Proxy URL (if using VPN)
-# TRADING_PROXY_URL=http://127.0.0.1:7890
-# TRADING_PROXY_URL=socks5://127.0.0.1:1080
-
-# Force China direct mode
-TRADING_CHINA_DIRECT=0
+TRADING_CHINA_DIRECT=1
 
 # Connection timeout (seconds)
-TRADING_CONNECTION_TIMEOUT=30
+TRADING_CONNECTION_TIMEOUT=15
 
 # ================================================================
 # MODEL SETTINGS
 # ================================================================
-# Model directory
 TRADING_MODEL_DIR=models_saved
-
-# Enable high precision mode
 TRADING_HIGH_PRECISION_MODE=0
-
-# Training epochs (default)
 TRADING_DEFAULT_EPOCHS=100
 
 # ================================================================
 # UI SETTINGS
 # ================================================================
-# Chart theme
-# Options: dark | light | classic
 TRADING_CHART_THEME=dark
-
-# Enable real-time chart updates
 TRADING_REALTIME_CHARTS=1
-
-# Chart update interval (milliseconds)
 TRADING_CHART_UPDATE_INTERVAL=3000
 
 # ================================================================
 # LOGGING
 # ================================================================
-# Log level
-# Options: DEBUG | INFO | WARNING | ERROR | CRITICAL
 TRADING_LOG_LEVEL=INFO
-
-# Log directory
 TRADING_LOG_DIR=logs
-
-# Enable audit logging
 TRADING_AUDIT_LOG=1
 
 # ================================================================
 # SECURITY
 # ================================================================
-# Use external Fernet key (more secure than file-based)
 # TRADING_SECURE_MASTER_KEY=<your-fernet-key>
-
-# Custom key file path (default is outside data_storage/)
 # TRADING_SECURE_KEY_PATH=/secure/path/fernet.key
 
 # ================================================================
 # METRICS & MONITORING
 # ================================================================
-# Enable metrics server
 TRADING_METRICS_ENABLED=0
-
-# Metrics server port
 TRADING_METRICS_PORT=8000
-
-# Metrics server host
 TRADING_METRICS_HOST=127.0.0.1
-
-# ================================================================
-# BROKER SETTINGS (Live Trading Only)
-# ================================================================
-# Broker name (for easytrader)
-# Options: gf | ht | yj | ths | etc.
-TRADING_BROKER_NAME=
-
-# Broker configuration file path
-TRADING_BROKER_PATH=
 
 # ================================================================
 # DATABASE
 # ================================================================
-# Data storage directory
 TRADING_DATA_DIR=data_storage
-
-# Cache directory
 TRADING_CACHE_DIR=cache
-
-# Enable database WAL mode (recommended)
 TRADING_DB_WAL_MODE=1
 
 # ================================================================
 # ADVANCED SETTINGS
 # ================================================================
-# Disable singleton pattern (for testing)
 TRADING_DISABLE_SINGLETONS=0
-
-# Strict realtime quotes (disable fallbacks)
 TRADING_STRICT_REALTIME_QUOTES=0
-
-# Allow last-close fallback from database
 TRADING_ALLOW_LAST_CLOSE_FALLBACK=0
-
-# Enable debug mode
 TRADING_DEBUG=0
