--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,12 @@ TRADING_MODEL_DIR=models_saved
 TRADING_HIGH_PRECISION_MODE=0
 TRADING_DEFAULT_EPOCHS=100
 
+# Local self-trained chat transformer (no Ollama required)
+TRADING_LLM_BACKEND=transformers_local
+TRADING_LLM_MODEL=self-chat-transformer
+TRADING_CHAT_MODEL_PATH=models_saved/LLM/chat_transformer
+TRADING_CHAT_LOCAL_FILES_ONLY=1
+
 # ================================================================
 # UI SETTINGS
 # ================================================================
