--- a/requirements-ai.txt
+++ b/requirements-ai.txt
@@ -5,6 +5,8 @@
 transformers>=4.46.0,<5.0.0
 tokenizers>=0.20.0,<1.0.0
 safetensors>=0.4.0,<1.0.0
+accelerate>=0.34.0,<2.0.0
+peft>=0.13.0,<1.0.0
 
 # HTTP and async support
 httpx>=0.25.0                    # Async HTTP client
